src/styles/style.css
/* font Lato imported from Google Fonts  */
@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Lato:wght@300&display=swap');

:root {
  --primary-color: #808f85;
  --dark-color: #595959;
  --light-color: #f4f4f4;
}


* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family: 'lato', sans-serif;
  color: #333;
  line-height: 1.6;
}

ul {
  list-style-type: none;

}

a {
  text-decoration: none;
  color: none;
}

h1,
h2 {
  font-weight: 300;
  line-height: 1.2;
  margin: 10px 0;
}

p {
  /* tell the paragraph apart */
  margin: 10px 0;
}

img {
  /* keep the img with the container */
  width: 100%;
}

.logo {
  font-family: 'lato', sans-serif;

}

.logo:hover {
  animation: shake 1s;
  animation-iteration-count: infinite;
}

/* nav bar */

.navbar {
  background-color: var(--primary-color);
  color: #fff;
  height: 70px;
  position: fixed;
  width: 100%;
}

.navbar a:hover {
  border-bottom: 2px #fff solid;
}

.navbar ul {
  display: flex;

}

.navbar a {
  color: #fff;
  padding: 10px;
  margin: 0 5px;

}



/*about me section*/

.about-me {
  height: auto;
  background-color: var(--primary-color);
  color: #fff;
  position: relative;
  width: 100%;
}


.about-me-text {
  animation: slideInFromLeft 1s ease-in;
  /*plz check animation below*/
}


.about-me h1 {
  font-size: 40px;
}

.about-me p {
  margin: 20px 0;
}

.about-me-pic {
  animation: slideInFromRight 1s ease-in;
}

.myphoto {
  border-radius: 10%;

}

.myphoto:hover {
  animation: shake 1s;
  animation-iteration-count: infinite;
}


/* skills*/
.eskills{
  height: auto;
  width: 100%;
}

.skills .flex {
  flex-wrap: wrap;
  justify-content: flex-start;
}


.skills .card {
  margin: 18px 10px 40px;
}


.svg {
  height: 50px;
  width: 50px;
}


/* footer section */

.footer {
  width: 100%;
}

.fa-github {
  color: white;
}

.fa-github:hover {
  color: black;
}

.fa-linkedin {
  color: white;
}

.fa-linkedin:hover {
  color: navy;
}



/* work page */
.work{
  height: auto;
  width: 100%;
}

.introduction-text {
  animation: slideInFromTop 1s ease-in;
  /*plz check animation below*/
}


.project-img {
  border-radius: 5%;
}

/* contact-page */

.contact {
  top: 60px;
  height: auto;
  width: 300px;
  padding: 0px;
  animation: slideInFromLeft 1s ease-in;
}

.contact-flex {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.contact input[type='email'] {
  border: 0;
  border-bottom: 1px solid var(--primary-color);
  width: 100%;
  padding: 3px;
  font-size: 16px;
}

.contact textarea {
  border: 0;
  border-bottom: 1px solid var(--primary-color);
  height: 200px;
  width: 100%;
  padding: 3px;
  font-size: 16px;
}




/* class will be used all around website */
.container {
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 40px;

}


.card {
  background-color: #fff;
  border-radius: 10px;
  padding: 20px;
  margin: 10px;
  transition: transform 0.2s ease-in;
}
/* 

.card:hover {
  animation: shake 1s;
  animation-iteration-count: infinite;
} */


.btn {
  display: inline-block;
  padding: 10px 30px;
  cursor: pointer;
  background: var(--primary-color);
  color: #fff;
  border: none;
  border-radius: 5px;
}

.btn:hover {
  animation: shake 1s;
  animation-iteration-count: infinite;
}

.btn-outline {
  background-color: transparent;
  border: 1px #fff solid;
}


.flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  justify-content: center;
  align-items: center;
  height: 100%
}

.grid-3 {
  grid-template-columns: repeat(3, 1fr);
}


/* Animations */
@keyframes slideInFromLeft {
  0% {
    transform: translateX(-100%);
  }

  100% {
    transform: translateX(0);
  }
}

@keyframes slideInFromTop {
  0% {
    transform: translateY(-100%);
  }

  100% {
    transform: translateX(0);
  }
}

@keyframes slideInFromRight {

  0% {
    transform: translateX(100%);
  }

  100% {
    transform: translateX(0);
  }

}

@keyframes colorchange {
  from {
    color: lightgrey;
  }

  to {
    color: darkgreen;
  }
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}








/*______________________my "library"______________________________*/
/* some of them are not used but still keep them here for future development*/
/* commonly used text sizes */
.lead {
  font-size: 20px;
}

.sm {
  font-size: 1rem;
}

.md {
  font-size: 2rem;
}

.lg {
  font-size: 3rem;
}

.xl {
  font-size: 4rem;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

/* commonly used margin */
.my-1 {
  margin: 1rem 0;
}

.my-2 {
  margin: 1.5rem 0;
}

.my-3 {
  margin: 2rem 0;
}

.my-4 {
  margin: 3rem 0;
}

.my-5 {
  margin: 4rem 0;
}

.m-1 {
  margin: 1rem;
}

.m-2 {
  margin: 1.5rem;
}

.m-3 {
  margin: 2rem;
}

.m-4 {
  margin: 3rem;
}

.m-5 {
  margin: 4rem;
}

/* commonly used padding */
.py-1 {
  padding: 1rem 0;
}

.py-2 {
  padding: 1.5rem 0;
}

.py-3 {
  padding: 2rem 0;
}

.py-4 {
  padding: 3rem 0;
}

.py-5 {
  padding: 4rem 0;
}

.p-1 {
  padding: 1rem;
}

.p-2 {
  padding: 1.5rem;
}

.p-3 {
  padding: 2rem;
}

.p-4 {
  padding: 3rem;
}

.p-5 {
  padding: 4rem;
}

/* back-ground color*/

.bg-primary {
  background-color: var(--primary-color);
  color: #fff;
}

.bg-dark {
  background-color: var(--dark-color);
  color: #fff;
}

.bg-light {
  background-color: var(--light-color);
  color: #333;
}



/* responsiveness */
/* tablets */


@media (max-width: 768px) {
  .grid {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
  }

  .myphoto {
    width: 300px;
    height: 300px;
  }
}


/* Mobile */

@media (max-width: 500px) {
  .container {
    display: flex;
    flex-direction: column;
  }

  .navbar {
    height: 120px;
  }



}

